syntax = "proto3";

package de.unistuttgart.isw.sfsc.example.services.messages;
option java_multiple_files = true;

message UpdateCounter {
    string value = 1;
    string name = 2;
}

message VoidCall {

}